# episode-downloader

./: Dockerfile
.devcontainer/: devcontainer.json
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/routes/: file_system.rs  mod.rs  search.rs  series.rs
backend/src/scraping/: mod.rs  request.rs
frontend/: .dockerignore  bun.lockb  bunfig.toml  components.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/: debounce.ts
frontend/src/lib/components/FolderPicker/: FolderPicker.svelte  index.ts
frontend/src/lib/components/Search/: Search.svelte  index.ts
frontend/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte
frontend/src/lib/components/ui/popover/: popover-content.svelte
frontend/src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte  scroll-area.svelte
frontend/src/lib/components/ui/skeleton/: skeleton.svelte
frontend/src/lib/server/: fetchGogo.ts  getAnimeInfo.ts  getEpisodeDownloadLink.ts  getEpisodes.ts
frontend/src/lib/stores/: seriesFolderPath.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/[animeId]/: +page.server.ts  +page.svelte
frontend/src/routes/api/[animeId]/episodes/: +server.ts
frontend/src/routes/api/download/: +server.ts
frontend/src/routes/api/getFolders/: +server.ts
frontend/src/routes/api/search/: +server.ts
frontend/src/routes/series/: +page.svelte
